--- a/content/posts/journal/2022/03/05.md
+++ b/content/posts/journal/2022/03/05.md
@@ -51,7 +51,7 @@ Even before reading these words, whenever I listened to this song, I felt an ima
 I think that this image captured the feeling of cherishing another as if they were "the axis on which the whole earth revolves." 
 
 The lyrics, too, embody Thich Nhat Hahn's reminder that "only this actual moment is life." 
-Al Green, with such bittersweet cadence, begs: *Let's just be glad // we have this time // to spend together // There is no need // to watch the bridges // that we're burning...*
+Al Green, with such weariness and bittersweet cadence, begs: *Let's just be glad // we have this time // to spend together // There is no need // to watch the bridges // that we're burning...*
 It's no matter now: let's just join in one last tender embrace, even as our world crumbles apart. 
 It hurts my heart to even write this. The thoughts aren't really fully coming through, and I'm not happy with how the words have come out, but this'll have to do for now, at the very least to record the ideas. 
 
