--- a/content/posts/journal/2022/04/10.md
+++ b/content/posts/journal/2022/04/10.md
@@ -18,7 +18,7 @@ I spent a bit of time attempting to recall the word for the study of putting one
 
 This spark of cognition made me question how it is that we experience these types of "revelatory" thoughts. What happens in the brain when we attempt to recall something that is on the tip of our tongue? How do we suddenly come to connecting the dots? In this particular instance, I knew that the word began with the letter "E," and that it was the title of a lecture video on [human behavioral biology](https://www.youtube.com/watch?v=NNnIGh9g6fA) that I am currently watching. I knew that one such word that fit into this category was "Endocrinology," but I knew that it wasn't what I was searching for. But the harder I tried to remember, the more the word seemed to evade me, until I decided to put it on the back burner of my mind. I entrusted the task to my future self, thinking "it'll come to me later," and not five seconds had passed until it popped into my brain. 
 
-But what had happened? I wasn't actively thinking about the word. My mind had already jumped to another object of consideration. What was my brain[^brain] doing without me knowing? It's clear that there are an uncountable number of cognitive processes that occur simultaneously in our brain, a vast majority of them outside of the realm of conscious perception. It reminds me of what Thich Nhat Hahn mentions in *The Sun My Heart*: we have a "store-house consciousness" that carries the seeds of our thought, nurtures it without our conscious attention, and bears the fruit of knowledge in due time. This idea is also something that Professor de Silva conveyed to me, and I've held his words close to my heart. I wholly believe it to be true. 
+But what had happened? I wasn't actively thinking about the word. My mind had already jumped to another object of consideration. What was my brain[^brain] doing without me knowing? It's clear that there are an uncountable number of cognitive processes that occur simultaneously in our brain, a vast majority of them outside of the realm of conscious perception. It reminds me of what Thich Nhat Hahn mentions in *The Sun My Heart*: we have a "store-house consciousness" that carries the seeds of our thought, nurtures it without our conscious attention, and bears the fruit of knowledge in due time. This idea is also something that Professor de Silva conveyed to me (albeit in different form), and I've held many of his words close to my heart. I wholly believe it to be true. 
 
 [^brain]: Interesting that I have to make the distinction between "me" and "my brain." Reminds me of V.S. Ramachandran's commentary on the illusory self in *Phantoms in the Brain*: what am "I"? 
 
