--- a/content/posts/journal/2022/04/13.md
+++ b/content/posts/journal/2022/04/13.md
@@ -11,7 +11,7 @@ category: journal
 ---
 
 I had a strange dream last night. Well, in actuality, it was a multitude of dreams, but this particular one disturbed me. 
-I only recall a single fragment of it. Someone was cooking a gargantuan purple fish on a gas stove. 
+I only recall a single grotesque fragment of it. Someone was cooking a gargantuan purple fish on a gas stove. 
 Its jaundiced, bulging eyes protruded from its head and its body was covered in yellowed spikes. 
 Most nauseatingly, its mouth was stuffed with tentacles, colored with the same purple hue and littered with the same spikes as were on the rest of the body. 
 The person cooking the fish looked at me and then grabbed ahold of the tentacles and twisted them loose from the fish's mouth. 
