--- a/content/posts/journal/2022/04/14.md
+++ b/content/posts/journal/2022/04/14.md
@@ -22,8 +22,8 @@ Better not to wist, and to instead [wist](https://en.wiktionary.org/wiki/wist#Ve
 
 A conundrum that I am contemplating today is the problem of habituation with respect to eating food. 
 It's an unfortunate side effect of human physiology that your taste buds habituate to the flavor of the food that you're eating.
-Well, perhaps it's not a mere side effect: one can imagine the havoc that you would wreck on your body if you never habituated to the flavor of sweets, for instance. 
-However, I still think it unfortunate that in the course of eating a daily meal, the taste gets diminished over and over again.
+Well, perhaps it's not a mere side effect: I can imagine the havoc that I would wreck on my body if I never habituated to the flavor of sweets, for instance. 
+However, I still think it quite unfortunate that in the course of eating a daily meal, the actual tasting of it gets diminished over and over again.
 Sometimes when I eat, I end up barely tasting the food at all.[^me]
 Is there a way to prevent this phenomenon from happening? 
 We have palette cleansers and the like, but I wonder if there's a way to avoid this desensitization with the mind alone.
@@ -31,7 +31,7 @@ Is this a battle where willpower can triumph over the body?
 
 The reason why I'm interested in the answer to this question is that this situation seems to me to be a microcosm of the myriad of ways that desensitization plagues our lives.
 How much of the richness of life are we missing merely because we are accustomed to the way that things are? 
-What of the miraculous nature of existence, its taste and suchness, are we forgoing because of our iniquities and the faults in the human constitution?
+What of the miraculous nature of existence, its taste and truth and suchness, are we forgoing because of our iniquities and the faults in the human constitution?
 How can we expand our minds and our hearts and savor each and every moment of our lives?
 
 A slight tangent, but this line of thought reminds me of this quote that I came upon while reading the [Wikipedia page on praxis](https://en.wikipedia.org/wiki/Praxis_(process)):
@@ -49,28 +49,28 @@ A continuation of the theme in the previous section that I've been thinking abou
 I was thinking today about the phrase *time is money* and how that isn't truly accurate - I'd suggest that the idiom should instead be *attention is money*.
 One's time is fickle, and its "value" is reliant on the way that one chooses to utilize it. 
 You could have all the time in the world, and spend it in a way that would be equivalent to you having not had it at all.
-More time is not, of its own accord, inherently more valuable.
+More time is not, of its own accord, immediately more valuable.
 
 I would offer that attention, on the other hand, does possess this characteristic: more attention is more "valuable."
 Attention is the means by which one can compress or expand time: have attention not, and your time slips away between your fingers. 
 Have attention, and your time, and what you do with it, extends to greater lengths. 
 The value of attention is no secret to those seeking profits, as evidenced by the existence of a multi-billion (if not trillion) dollar industry that capitalizes off of setting the most tantalizing and inescapable traps for capturing people's gaze.
 
-The importance of attention - the centrality of it to the human project - is why I'm very scared of apps like TikTok. 
+The importance of attention — the centrality of it to the human project — is why I'm very scared of apps like TikTok. 
 TikTok is a black hole in this respect, sucking in all that orbit around it and never letting them go.
-It's a really masterful mechanism of thievery under our noses. 
+It's a really masterful mechanism of life thievery that operates (literally) right under our noses. 
 
 ---
 
-Another thing that I'm struggling with recently (there seems to be an endless stream of such things) is how strange it feels to be so dissonant in mind - to have parts of me that feel so serious, so somber, and yet in the very next second, to feel unbridled joy, to relish in the sun and heat and the spring breeze. 
-I feel so hopeless, and yet I cannot help but to feel a levity as I taste the flowers dancing on the fringes of the air - a fragrance so delicate that you worry that if you breathed in a moment too long or too harsh it would fade away as lightly as it had come - and I feel so unhappy, yet I recall a memory that makes the gremlin situated within my mind laugh, and it boils over my thoughts and into my face in the form of a contorted smile and a furrowed brow, as almost to relay the guilt of betraying my sorrows.
+Another feeling that I'm struggling with recently (there seems to be an endless stream of such things) is how strange it is to be so dissonant in mind - to have parts of me that feel so serious, so somber, and yet in the very next second, to feel unbridled joy, to relish in the sun and heat and the spring breeze. 
+I feel so hopeless, yet I cannot help but to feel a levity as I taste the flowers dancing on the fringes of the air — a fragrance so delicate that you worry that if you breathed in a moment too long or too harsh it would fade away as lightly as it had come — and I feel so unhappy, yet I recall a memory that makes the gremlin situated within my mind laugh, and that chuckle boils over into my face in the form of a contorted smile and a furrowed brow, as almost to relay the guilt of betraying my sorrows.
 My being aches like a terribly fragmented soul strung out and contorted in all sorts of strange directions.
 How would it feel to be harmonious at last? 
 That feeling must be what they call inner peace.
 
 --- 
 
-Yet another object of my contemplation (will there be no end to these thoughts?) is how in order to do anything in this life, one needs to have some level of "suspension of disbelief": to act, you must to believe in *something*, if not in yourself. 
+Yet another object of my contemplation (will there be no end to these thoughts!) is how in order to do anything in this life, one needs to have some level of "suspension of disbelief:" to act, you must to believe in *something*, if not in yourself. 
 Take this too far, and you risk submerging yourself in ego, rigidity, and dogma. 
 But not partake in it at all, and you get stuck in an endless cycle of doubt, self-correction, and perfectionism.
 It seems like there is a "sweet spot" between certainty and uncertainty (perhaps an [edge of chaos](https://en.wikipedia.org/wiki/Edge_of_chaos)?) where healthy thought and action lies, but it is (in my experience) extremely difficult to balance yourself there. 
@@ -79,23 +79,24 @@ It reminds me of Hofstader's `MIU` modes for dealing with formal systems that he
 - `I`-mode = *Intelligent mode*
 - `U`-mode = *Un-mode*
 To my understanding or interpretation, mechanical mode is the doing, whereas intelligent mode is the self-reflection, evaluation, and meta-cognition. 
-And as Hofstader points out in a later chapter (not in reference specifically to these modes, but in a more general sense), humans cannot seem to operate in multiple modes at a time, like how we can either listen to one melody in a piece of music or the whole thing in its entirety, but we cannot seem to listen to both one part and the whole at the same time. 
+And as Hofstader points out in a later chapter (not in reference specifically to these modes, but in a more general sense), humans cannot seem to operate in multiple modes at a time, like how we can either listen to one melody in a piece of music or the whole thing in its entirety, but we cannot seem to listen to both one part and the whole at once. 
 In a similar fashion, it seems incredibly difficult, if not impossible, to operate in `M`-mode and `I`-mode simulatneously.
-I suggest that one needs to first operate under a reasonable degree of certainty - *a.k.a.* operate in `M`-mode - and then switch into `I`-mode once the task is finished. 
+I suggest that one needs to first operate under a reasonable degree of certainty — *a.k.a.* operate in `M`-mode — and then switch into `I`-mode once the task is finished. 
 This suggestion seems to be quite obvious, but I took this long-winded way of explaining it to justify to myself the reasons why I should stop self-correcting and worrying about things to the extent that I get nothing done. 
 I think I try to operate in simultaneous `MI`-mode too often, and it inhibits the process of my doing.
 
 ---
 
 I'll finish this long-winded entry off with a occurence that tinged the rest of my afternoon with a slight sourness.
-After work, I stopped by the local used bookstore on Mercer Street, intent on purchasing a copy of *Alice in Wonderland*, which I had never read as a child. 
-To my elation, I found an attractive copy on the shelves and ushered it to the register.
-When I handed it over to the shopkeeper, he looked at it with slight disdain, and asked, "Where did you find this? ...was it in the kids' section... or in fiction?" 
+After work, I stopped by the local used bookstore on Mercer Street. 
+I was duly intent on purchasing a copy of *Alice in Wonderland*, which I had never read as a child. 
+To my elation, I found an attractive copy on the shelves and ushered it with eagerness and haste to the register.
+When I handed it over to the shopkeeper, he peered at it with a façade of slight disdain, and asked, "Where did you find this? ...was it in the kids' section... or in fiction?" 
 I managed to stammer across a reply that conveyed that it was in the fiction section (I wasn't even aware of a kids' section in the store!), and hastily carried Alice and myself away from the premises. 
 
 Upon reflection, it could very well be the case that he did not mean to insinuate anything by his question.
 But I'm one to be very sensitive to tones and non-verbal language, and his demeanor oozed with the drippings of judgement. 
-I'm not happy with how sensitive I am to such things: it's useful to be this way in some cases, but sometimes I percieve condemnation and disapproval where there is none or when it is misplaced. 
+I'm not happy with how sensitive I am to such things: it's useful to be this way in some cases, but sometimes I percieve condemnation and disapproval where there is none or become too afflicted by it when it is misplaced. 
 So what if I *did* find it in the kids' section! 
 To hell with literary elitism! Judgement begone! I am in the mood for whimsy and wonder.
 
