remove unpublished posts from topic pages

--- a/content/posts/journal/2022/04/14.md
+++ b/content/posts/journal/2022/04/14.md
@@ -6,7 +6,7 @@ lastupdated: '2022-05-06'
 group: '2022-04'
 published: true
 layout: post
-topics: [journal, 'youth', 'habituation', 'attention', 'cognitive dissonance']
+topics: [journal, 'youth', 'habituation', 'attention', 'cognitive dissonance', 'alice in wonderland']
 category: journal
 ---
 
