--- a/content/posts/journal/2021/09/30.md
+++ b/content/posts/journal/2021/09/30.md
@@ -1,5 +1,5 @@
 ---
-title: September 30th 2021
+title: September 30th, 2021
 subtitle: Journal entry for 2021-09-30; life update; finished The Trial; other random thoughts
 date: '2021-09-30'
 lastupdated: '2021-10-01'
