--- a/content/posts/journal/2021/10/14.md
+++ b/content/posts/journal/2021/10/14.md
@@ -1,5 +1,5 @@
 ---
-title: October 14th 2021
+title: October 14th, 2021
 subtitle: Journal entry for 2021-10-14; A Wind in the Door; relativity; interconnectivity
 date: '2021-10-14'
 lastupdated: '2021-10-14'
