--- a/content/posts/journal/2022/04/14.md
+++ b/content/posts/journal/2022/04/14.md
@@ -1,5 +1,5 @@
 ---
-title: April 14th 2022
+title: April 14th, 2022
 subtitle: Journal entry for 2022-04-14; youth and longing; habituation; tasting life; attention; a dissonant existence
 date: '2022-04-14'
 lastupdated: '2022-05-06'
@@ -10,7 +10,7 @@ topics: [journal, 'youth', 'habituation', 'attention', 'cognitive dissonance', '
 category: journal
 ---
 
-I was walking from the Christopher Street station to the gym this morning when I came across a parade of children being chaparoned to school by their parents. 
+I was walking from the Christopher Street station to the gym this morning when I came across a parade of children being chaperoned to school by their parents. 
 I began to daydream about being their age, if only for a day, if for nothing else than to relinquish myself of the overbearing weight of self-knowledge and consciousness.
 Living in oblivion sounded quite appealing at the time. 
 But in a moment of clarity and foresightedness, I caught my wistful thinking as it was tumbling towards self-indulgence: I thought of a scenario in which, in twenty years time, I may very well be crossing the path of someone my own age (a ripe twenty-two) on the street. 
@@ -23,9 +23,8 @@ Better not to wist, and to instead [wist](https://en.wiktionary.org/wiki/wist#Ve
 A conundrum that I am contemplating today is the problem of habituation with respect to eating food. 
 It's an unfortunate side effect of human physiology that your taste buds habituate to the flavor of the food that you're eating.
 Well, perhaps it's not a mere side effect: I can imagine the havoc that I would wreck on my body if I never habituated to the flavor of sweets, for instance. 
-However, I still think it quite unfortunate that in the course of eating a daily meal, the actual tasting of it gets diminished over and over again.
-Sometimes when I eat, I end up barely tasting the food at all.[^me]
-Is there a way to prevent this phenomenon from happening? 
+However, I still think it quite unfortunate that in the course of eating a daily meal, the actual tasting of it gets diminished over and over again: sometimes when I eat, I end up barely tasting the food at all.[^me]
+Is there a way to prevent this phenomenon from occurring? 
 We have palette cleansers and the like, but I wonder if there's a way to avoid this desensitization with the mind alone.
 Is this a battle where willpower can triumph over the body?  
 
@@ -63,7 +62,7 @@ It's a really masterful mechanism of vivo-thievery that operates (literally) rig
 ---
 
 Another feeling that I'm struggling with recently (there seems to be an endless stream of such things) is how strange it is to be so dissonant in mind — to have parts of me that feel so serious, so somber, and yet in the very next second, to feel unbridled joy, to relish in the sun and heat and the spring breeze. 
-I feel so hopeless, yet I cannot help but to feel a levity as I taste the flowers dancing on the fringes of the air — a fragrance so delicate that you worry that if you breathed in a moment too long or too harsh it would fade away as lightly as it had come — and I feel so unhappy, yet I recall a memory that makes the gremlin in my mind laugh, and it boils over into my face in the form of a contorted smile and a furrowed brow, as almost to relay the guilt of betraying my sorrows.
+I feel so hopeless, yet I cannot help but to feel a levity as I taste the flowers dancing on the fringes of the air — a fragrance so delicate that you fear that if you breathed in a moment too long or too harsh it would fade away as lightly as it had come — and I feel so unhappy, yet I recall a memory that makes the gremlin in my mind laugh, and it boils over into my face in the form of a contorted smile and a furrowed brow, as almost to relay the guilt of betraying my sorrows.
 My being aches like a terribly fragmented soul strung out and contorted in all sorts of strange directions.
 How would it feel to be harmonious at last? 
 That feeling must be what they call inner peace.
@@ -96,7 +95,7 @@ I managed to stammer across a reply that conveyed that it was in the fiction sec
 
 Upon reflection, it could very well be the case that he did not mean to insinuate anything with his question.
 But I'm one to be very sensitive to tones and non-verbal language, and his demeanor oozed with the drippings of judgement. 
-I'm not happy with how sensitive I am to such things: it's useful to be this way in some cases, but sometimes I percieve condemnation and disapproval where there is none or become too afflicted by it when it is misplaced. 
+I'm not happy with how sensitive I am to such things: it's useful to be this way in some cases, but sometimes I perceive condemnation and disapproval where there is none or become too afflicted by it when it is misplaced. 
 So what if I *did* find it in the kids' section! 
 To hell with literary elitism! Judgement begone! I am in the mood for whimsy and wonder.
 
