--- a/content/posts/journal/2021/10/01.md
+++ b/content/posts/journal/2021/10/01.md
@@ -1,5 +1,5 @@
 ---
-title: October 1st 2021
+title: October 1st, 2021
 subtitle: Journal entry for 2021-10-01; more thoughts on The Trial; connections to Mystery of Iniquity by Ms. Lauryn Hill
 date: '2021-10-01'
 lastupdated: '2021-10-01'
