--- a/content/posts/journal/2021/10/12.md
+++ b/content/posts/journal/2021/10/12.md
@@ -1,5 +1,5 @@
 ---
-title: October 12th 2021
+title: October 12th, 2021
 subtitle: Journal entry for 2021-10-12; BNP Paribas Open; zooming out; oneness of humanity
 date: '2021-10-12'
 lastupdated: '2021-10-12'
