--- a/content/posts/journal/2022/04/10.md
+++ b/content/posts/journal/2022/04/10.md
@@ -1,5 +1,5 @@
 ---
-title: April 10th 2022
+title: April 10th, 2022
 subtitle: Journal entry for 2022-04-10; a bird's love life; cognition; a slight descent into madness
 date: '2022-04-10'
 lastupdated: '2022-04-10'
