--- a/content/posts/journal/2022/04/13.md
+++ b/content/posts/journal/2022/04/13.md
@@ -1,5 +1,5 @@
 ---
-title: April 13th 2022
+title: April 13th, 2022
 subtitle: Journal entry for 2022-04-13; a dream; guilt about eating meat
 date: '2022-04-13'
 lastupdated: '2022-04-13'
