fix order of entries

--- a/content/posts/journal/2022/05/05.md
+++ b/content/posts/journal/2022/05/05.md
@@ -1,6 +1,6 @@
 ---
 title: May 5th, 2022
-subtitle: Journal entry for 2022-05-05
+subtitle: Journal entry for 2022-05-05; a tense grip; a divine scene; semantics of color
 date: '2022-05-05'
 lastupdated: '2022-06-24'
 group: '2022-05'
