remove quotes around date in frontmatter for correct sorting by graphql

--- a/content/posts/journal/2021/10/12.md
+++ b/content/posts/journal/2021/10/12.md
@@ -1,8 +1,8 @@
 ---
 title: October 12th, 2021
 subtitle: Journal entry for 2021-10-12; BNP Paribas Open; zooming out; oneness of humanity
-date: '2021-10-12'
-lastupdated: '2021-10-12'
+date: 2021-10-12
+lastupdated: 2021-10-12
 group: '2021-10'
 published: true
 layout: post
