--- a/content/posts/journal/2022/04/14.md
+++ b/content/posts/journal/2022/04/14.md
@@ -1,8 +1,8 @@
 ---
 title: April 14th, 2022
 subtitle: Journal entry for 2022-04-14; youth and longing; habituation; tasting life; attention; a dissonant existence
-date: '2022-04-14'
-lastupdated: '2022-05-06'
+date: 2022-04-14
+lastupdated: 2022-05-06
 group: '2022-04'
 published: true
 layout: post
