--- a/content/posts/journal/2022/04/17.md
+++ b/content/posts/journal/2022/04/17.md
@@ -1,8 +1,8 @@
 ---
 title: April 17th, 2022
 subtitle: Journal entry for 2022-04-17; two encounters; impermanence and beauty
-date: '2022-04-17'
-lastupdated: '2022-05-08'
+date: 2022-04-17
+lastupdated: 2022-05-08
 group: '2022-04'
 published: true
 layout: post
