--- a/content/posts/journal/2022/05/05.md
+++ b/content/posts/journal/2022/05/05.md
@@ -1,8 +1,8 @@
 ---
 title: May 5th, 2022
 subtitle: Journal entry for 2022-05-05; a tense grip; a divine scene; semantics of color
-date: '2022-05-05'
-lastupdated: '2022-06-24'
+date: 2022-05-05
+lastupdated: 2022-06-24
 group: '2022-05'
 published: true
 layout: post
