Revert "fix format of dates from graphql -> typescript"
This reverts commit 06dc4900450313d0ea2a39dbf3d544d9e10b4410.

--- a/content/posts/journal/2022/05/05.md
+++ b/content/posts/journal/2022/05/05.md
@@ -36,7 +36,7 @@ But alas, this elation did not last for long.
 As I am wont to do, I leapt from this grounded serenity to an ethereal puff of curiosity. 
 I began to contemplate the meaning that is embedded within color: why was I so pacified by this viridescent glow? 
 Was it the actual meeting of wavelengths of light with my retina that was so supremely soothing to my soul, or was it merely the web of relational meaning that I've spun around this sight that placated my restlessness? 
-Without a semblance of an answer in my thoughts, I then recalled an oft-repeated phrase in Kurt Vonnegut's *Galápagos* (which occurs a hefty twenty-two times):
+Without a semblance of an answer in my thoughts, I then recalled an oft-repeated phrase in Kurt Vonnegut's *Galápagos* (which is repeated a hefty twenty-two times):
 <div class='epigraph'>
 
 > the blue tunnel that leads to the Afterlife.
