fix default/null behavior on theme toggler

--- a/content/posts/journal/2022/05/05.md
+++ b/content/posts/journal/2022/05/05.md
@@ -2,7 +2,7 @@
 title: May 5th, 2022
 subtitle: Journal entry for 2022-05-05; a tense grip; a divine scene; semantics of color
 date: 2022-05-05
-lastupdated: 2022-06-24
+lastupdated: 2022-06-25
 group: '2022-05'
 published: true
 layout: post
@@ -45,12 +45,12 @@ Without a semblance of an answer in my thoughts, I then recalled an oft-repeated
 
 In some convoluted manner, could blue be the semantic antithesis to green? 
 A chromatic[^chrome] chaos to chromatic cosmos? 
-To me, green is the color of life, of an abundant Earth teeming to the brim with creation and production, capturing the imprint of cosmic order and orchestration in the immaculately delicate veins of a leaf or the fractal budding of a Romanesco. 
+To me, green is the color of life, of an abundant Earth teeming, brimming, with creation and production, capturing the imprint of cosmic order and orchestration in the immaculately delicate veins of a leaf or the fractal budding of a Romanesco. 
 It is the known, the familiar, the containable, the natural — whereas blue... blue is the color of unnature, the color least found on any flora or fauna; it has its greatest presence in the vast unimaginable voids like the sky and the sea; it is the color of the unknown, the latent potential and primordial chaos that drives both our fear and our irresistible curiosities; and now, in the computer age, it is the color of simulation, of death by the digital blue screen.
 
-[^chrome]: *Chromatic* is a word that I thoroughly enjoy. Perhaps it is more accurate to say that I enjoy the Greek root *khrōma,* meaning color: it is an especially multifaceted root, employed in words related to color (chromatic aberration), music (chromatic scale), and genetics (chromosome). In my mind, these are all related in the form of *harmony* and *chord*: wavelengths of light mix to form the vast array of colors, notes in music mix to form the vast array of chords, and genes mix to form the vast array of phenotypes that are displayed in organisms. 
+[^chrome]: *Chromatic* is a word that I thoroughly enjoy. Perhaps it is more accurate to say that I enjoy the Greek root *khrōma,* meaning color: it is an especially multifaceted root, employed in words related to color (chromatic aberration), music (chromatic scale), and genetics (chromosome). In my mind, these are all related in the form of *harmony* and *chord*: wavelengths of light mix to form the vast array of colors, notes in music mix to form the vast array of chords, and genes in chromosomes mix to form the vast array of phenotypes that are displayed in organisms. 
 
-But all things in balance: from way up in space, from the vantage point of the almost-infinite, we can witness the intertwining of these cosmic and chaotic forces on the surface of the pale blue-green dot of the Earth.
+But all things in balance: from way up in space, from the vantage point of the almost-infinite, we can witness the intertwining of these cosmic and chaotic forces on the surface of the pale blue-green dot that we call home.
 
 Perhaps this whole idea is too far a stretch, but it is, at the very least, a quite satisfying portrait for my mind to paint. 
 
