--- a/content/posts/journal/2022/04/14.md
+++ b/content/posts/journal/2022/04/14.md
@@ -62,7 +62,7 @@ It's a really masterful mechanism of vivo-thievery that operates (literally) rig
 ---
 
 Another feeling that I'm struggling with recently (there seems to be an endless stream of such things) is how strange it is to be so dissonant in mind — to have parts of me that feel so serious, so somber, and yet in the very next second, to feel unbridled joy, to relish in the sun and heat and the spring breeze. 
-I feel so hopeless, yet I cannot help but to feel a levity as I taste the flowers dancing on the fringes of the air — a fragrance so delicate that you fear that if you breathed in a moment too long or too harsh it would fade away as lightly as it had come — and I feel so unhappy, yet I recall a memory that makes the gremlin in my mind laugh, and it boils over into my face in the form of a contorted smile and a furrowed brow, as almost to relay the guilt of betraying my sorrows.
+I feel so hopeless, yet I cannot help but to feel a levity as I taste the flowers dancing on the fringes of the air — a fragrance so delicate that you fear that if you breathed in a moment too long or too harsh it would fade away as lightly as it had come — and I feel so unhappy, yet I recall a memory that makes the gremlin in my mind laugh, and it boils over into my face in the form of a strained smile and a furrowed brow, as almost to relay the guilt of betraying my sorrows.
 My being aches like a terribly fragmented soul strung out and contorted in all sorts of strange directions.
 How would it feel to be harmonious at last? 
 That feeling must be what they call inner peace.
@@ -81,7 +81,7 @@ To my understanding or interpretation, mechanical mode is the doing, whereas int
 And as Hofstader points out in a later chapter (not in reference specifically to these modes, but in a more general sense), humans cannot seem to operate in multiple modes at a time, like how we can either listen to one melody in a piece of music or the whole thing in its entirety, but we cannot seem to listen to both one part and the whole at once. 
 In a similar fashion, it seems incredibly difficult, if not impossible, to operate in `M`-mode and `I`-mode simultaneously.
 I suggest that one needs to first operate under a reasonable degree of certainty — *a.k.a.* operate in `M`-mode — and then switch into `I`-mode once the task is finished. 
-This suggestion seems to be quite obvious, but I took this long-winded way of explaining it to justify to myself the reasons why I should stop self-correcting and worrying about things to the extent that I get nothing done. 
+This suggestion seems to be quite obvious, but I took this roundabout way of explaining it to justify to myself the reasons why I should stop self-correcting and worrying about things to the extent that I get nothing done. 
 I think I try to operate in simultaneous `MI`-mode too often, and it inhibits the process of my doing.
 
 ---
