--- a/content/posts/journal/2022/04/17.md
+++ b/content/posts/journal/2022/04/17.md
@@ -42,12 +42,12 @@ He had the appearance of a wanderer: a lanky frame, a long and sun-weathered fac
 I don't mean this statement in jest, but something in his demeanor evoked that of a mouse or rat-like creature. 
 
 He sat there, gazing off into the distance with a thousand-mile stare reflecting through his semi-opaque, cerulean sunglasses.
-After a couple of contemplative minutes, he looked my way and stated matter-of-factly, but with a slight drawl, "Those are some beautiful flowers."
+After a couple of contemplative minutes, he looked my way and stated matter-of-factly, but with a slight drawl, "Those're some beautiful flowers."
 I laughed and readily agreed, and told him that I had bought them just over there, right off the corner. 
 In the conversation that transpired between us after this initiation, I began to suspect that something of great consequence was arresting his mind: it was almost as if he was attempting to convince himself of some weighty fact and as if he were talking more to a reflection of himself than to me.
 
-*These flowers, they're beautiful, get some water, get some plant food, nurse them back to health... It's a shame that they won't last, I hope that you can make them last.*
-*You know, they make these synthetic flowers these days that stay perfect forever, they're beautiful and they put them in houses as decoration.*
+*Those flowers, they're beautiful, get some water, get some plant food, nurse them back to health... It's a shame that they won't last, I hope you can make them last.*
+*Y'know, they make these synthetic flowers these days that stay perfect forever, they're beautiful and they put them in houses, as decoration.*
 But then: *Maybe it's okay that these aren't gonna be perfect forever, they fade, and that's a fact of life... but I hope you can make them last.*
 
 While he poured out his concerns to me, I nodded enthusiastically in agreement, especially to his last point. 
