--- a/content/posts/journal/2022/05/05.md
+++ b/content/posts/journal/2022/05/05.md
@@ -32,8 +32,8 @@ I was being embraced by these luminous arms of green and gold, seemingly endless
 With the crooning of birdsong above me, I felt as though I were being cradled in the arms of Nature herself.
 The radiant splendor of the scene before me and the immeasurable peace and security that I felt in this moment apprehended my mind and for a few seconds, I had no thought of anything but the indescribable essence of it all: if divine beauty could ever flourish in the world, if the heavens could ever come down to meet us here on the humble earth, I wondered if it were not in this.
 
-But alas, this elation did not last for long. 
-As I am wont to do, I leapt from this grounded serenity to an ethereal puff of curiosity. 
+But this elation did not last for long. 
+As the mind is wont to do, it leapt from this grounded serenity to an ethereal puff of curiosity. 
 I began to contemplate the meaning that is embedded within color: why was I so pacified by this viridescent glow? 
 Was it the physical intersection of wavelengths of light with my retina that was so supremely soothing to my soul, or was it merely the web of relational meaning that I've spun around this sight that placated my restlessness? 
 Without a semblance of an answer in my thoughts, I then recalled an oft-repeated phrase in Kurt Vonnegut's *Galápagos* (which occurs a hefty twenty-two times):
@@ -45,7 +45,7 @@ Without a semblance of an answer in my thoughts, I then recalled an oft-repeated
 
 In some convoluted manner, could blue be the semantic antithesis to green? 
 A chromatic[^chrome] chaos to chromatic cosmos? 
-To me, green is the color of life, of an abundant Earth teeming, brimming, with creation and production, capturing the imprint of cosmic order and orchestration in the immaculately delicate veins of a leaf or the fractal budding of a Romanesco. 
+To me, green is the color of life, of an abundant Earth teeming with creation and production, capturing the imprint of cosmic order and orchestration in the immaculately delicate veins of a leaf or the fractal budding of a Romanesco. 
 It is the known, the familiar, the containable, the natural — whereas blue... blue is the color of unnature, the color least found on any flora or fauna; it has its greatest presence in the vast unimaginable voids like the sky and the sea; it is the color of the unknown, the latent potential and primordial chaos that drives both our fear and our irresistible curiosities; and now, in the computer age, it is the color of simulation, of death by the digital blue screen.
 
 [^chrome]: *Chromatic* is a word that I thoroughly enjoy. Perhaps it is more accurate to say that I enjoy the Greek root *khrōma,* meaning color: it is an especially multifaceted root, employed in words related to color (chromatic aberration), music (chromatic scale), and genetics (chromosome). In my mind, these are all related in the form of *harmony* and *chord*: wavelengths of light mix to form the vast array of colors, notes in music mix to form the vast array of chords, and genes in chromosomes mix to form the vast array of phenotypes that are displayed in organisms. 
