--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -1,6 +1,6 @@
 ---
 title: November 23rd, 2022
-subtitle: Journal entry for 2022-11-23
+subtitle: Journal entry for 2022-11-23; eleven lines
 date: 2022-11-23
 lastupdated: 2022-11-23
 group: '2022-11'
@@ -18,7 +18,7 @@ Once again—the squirrels are fat; and I am alone.
 
 *where on earth did you go?*
 
-*You cannot see there,* came the reply. 
+*You cannot look there,* came the reply. 
 
 *I thought that you would know.*
 
@@ -30,7 +30,7 @@ Did you search for me in all your joys and pain?
 
 *or in the face of those you know?*
 
-Birth and death hath torn me asunder; now you must endure the throe—
+Birth and death hath torn me asunder; now *you* must endure the throe—
 
-Only then will you find that which you seek, and the answers of long ago.
+Only then will you find that which you need, and the answers of long ago.
 
