--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -26,7 +26,7 @@ Did you seek me in the roars of silence?
 
 *in the deaf'ning and blinding snow?*
 
-Did you search for me in all your joys and pain? 
+Did you search in all your joys and pain? 
 
 *or in the face of those you know?*
 
