--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -32,5 +32,5 @@ Did you search in all your joys and pain?
 
 Birth and death hath torn me asunder; now *you* must endure the throe—
 
-Only then will you find that which you need, and the answers of long ago.
+Only then will you find that which you need, and the answers of far ago.
 
