add backlink functionality

--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -22,7 +22,7 @@ Once again—the squirrels are fat; and I am alone.
 
 *I thought that you would know.*
 
-Did you seek me in the roars of silence? 
+Did you seek in the roars of silence? 
 
 *in the deaf'ning and blinding snow?*
 
@@ -33,4 +33,3 @@ Did you search in all your joys and pain?
 Birth and death hath torn me asunder; now *you* must endure the throe—
 
 Only then will you find that which you need, and the answers of far ago.
-
