update titles of page templates

--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -20,9 +20,9 @@ Once again—the squirrels are fat; and I am alone.
 
 *You cannot look there,* came the reply. 
 
-*I thought that you would know.*
+*I thought that you would've known.*
 
-Did you seek in the roars of silence? 
+Did you seek thyself in the roars of silence? 
 
 *in the deaf'ning and blinding snow?*
 
