change modern style

--- a/content/posts/journal/2022/11/23.md
+++ b/content/posts/journal/2022/11/23.md
@@ -18,7 +18,7 @@ Once again—the squirrels are fat; and I am alone.
 
 *where on earth did you go?*
 
-*You cannot look there,* came the reply. 
+*You should not look there,* came the reply. 
 
 *I thought that you would've known.*
 
